# vantapaper

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md
shaders/: image.frag  nitstest.frag  testpattern.frag  video_convert.frag
src/: cm_tagging.cpp  cm_tagging.h  color_math.h  daemon.cpp  daemon.h  hdr_image.cpp  hdr_image.h  main.cpp  playlist.cpp  playlist.h  rhiwindow.cpp  rhiwindow.h  state_frame.cpp  state_frame.h  transition.h  video_source.cpp  video_source.h
